--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -26,8 +26,8 @@ services:
       dockerfile: Dockerfile.dev
       context: ./client
     volumes:
-      - /app/node_modules
-      - ./client:/app
+      - /home/node/app/node_modules
+      - ./client:/home/node/app
     environment:
       - WDS_SOCKET_PORT=0
   worker:
